base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metis
  name: metis
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    app: metis
